--- a/etersoft-build-utils/TODO
+++ b/etersoft-build-utils/TODO
@@ -19,7 +19,7 @@ pkgrepl.pclinux.2007 - для конкретной версии системы
 записываем, откуда (из ALT) на что в другой системе менять
 
 Сделать -x для удалённой сборки на x86_64?
-Сделать чтобы cvs_update не выводил вопросы об отсутствующих файлах (man cvs?)
+#Сделать чтобы cvs_update не выводил вопросы об отсутствующих файлах (man cvs?)
 %homedir в определении tmp не работает?
 
 Реализовать rpm -bE через rpm --showrc ?
@@ -41,42 +41,42 @@ pkgrepl.pclinux.2007 - для конкретной версии системы
 макроподстановок). Но это, кажется, ещё более сложная задача.
 
  
-=== Версия 1.3 ===
+=== Версия 1.6 ===
  - Не трогать часть файла после %changelog при rpmcs
  - добавить сборки раскидавшихся зависимостей на Иксы в одну
- - добавлять md5sum наподобие как в PLD для Source
+# - добавлять md5sum наподобие как в PLD для Source
  - доделать проверку на качество лицензии в LICENSE и содержимое INSTALL
  - rpmbph для src.rpm (через hasher):
    --init-root, .in, rpm -i src.rpm, rpmbph (не собирающий в hasher), .out { команды в скобках }
    чтобы спек исправлял прямо в hasher при сборке??
- - если rpm -bE отсутствует, что происходит - проверить.
+# - если rpm -bE отсутствует, что происходит - проверить.
  - вынести в функцию: список бинарных пакетов на основе src.rpm и каталога с пакетами
  - подготовить текст новости, порекламировать
  - обновить/сделать страницу с описанием проекта?
 
-=== Версия 1.4 ===
- - доделать rpmbugs -n (создание баги)
+=== Версия 1.7 ===
+# - доделать rpmbugs -n (создание баги)
  - sles_version, rhel_version, alt_version
  - myhsh не возвращает код состояния сборки?
  - how to use --build-args= for hsh? - проброс параметров в myhsh как параметров для rpm
  - Сделать нормальную документацию?
  - получение спеков из других проектов, с отчётом об обновлении (diff между)
- - в rpmbph добавить возможность -a M24 M23 - списка для сборки
- - rpmbb -r -bi не работает :(
+# - в rpmbph добавить возможность -a M24 M23 - списка для сборки
+# - rpmbb -r -bi не работает :(
  - исправить формирование .pot
  - исправить способ создания pot -и echog (заметить на message)
 
 === Версия 2.0 ===
- - -v для повышенной говорливости (оно же DEBUG в конфиге)
+ - -v для повышенной говорливости (оно же DEBUG в конфиге) - сделано VERBOSE
  - TODO: добавить возможность указания запускаемой команды
    (разделяя строку параметров на до -- и после)
- - запихнуть файлы для apt в свои каталоги, чтобы не мешались
- - не работает -m в rpmbph и rpmbsh
+ + запихнуть файлы для apt в свои каталоги, чтобы не мешались
+# - не работает -m в rpmbph и rpmbsh
  - -i -u требуют именно такого порядка использования
  - перейти на общую обработку всех команд (одним скриптом)?
- - что возможно сделать с другими системами?
-   - short-circuit работает только с -bc и -bi на других платформах :(
- - помнить, что -m работает в дополнение к -r (сейчас -m вообще отключена)
+# - что возможно сделать с другими системами?
+#   - short-circuit работает только с -bc и -bi на других платформах :(
+# - помнить, что -m работает в дополнение к -r (сейчас -m вообще отключена)
 
 
 Каждый мантейнер (если боится забыть посмотреть лог сборки) может
