--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 Нуно сделать, чтобы при релизе (отправке) - rpmbs -s ? из git устанавливался тэг
+gear-create-tag - как отключить запрос gpg-ключа
 При при публикации?
 
 Изменить порядок поиска замен, чтобы он происходил без базовой версии, а замены от предыдущей версии
