--- a/share/eterbuild/pkgrepl/pkgrepl.alt.2.3
+++ b/share/eterbuild/pkgrepl/pkgrepl.alt.2.3
@@ -45,3 +45,4 @@ libXvMC-devel|XFree86-devel
 libXcursor-devel|XFree86-devel
 libXevie-devel|XFree86-devel
 libXv-devel|XFree86-devel
+xorg-cf-files|
