--- a/share/eterbuild/pkgrepl/pkgrepl.scientific.4.1
+++ b/share/eterbuild/pkgrepl/pkgrepl.scientific.4.1
@@ -43,3 +43,5 @@ libXvMC-devel|XFree86-devel
 libXcursor-devel|XFree86-devel
 libXevie-devel|XFree86-devel
 libXv-devel|XFree86-devel
+
+gccmakedep|xorg-x11-devel
