--- a/TODO
+++ b/TODO
@@ -1,11 +1,8 @@
-+ Сделать, чтобы APTCONF задавал используемый конфиг, а не базу для него
-+ Сделать замену содержимого sources.list на i586|x86_64, если архитектура x86_64
-+ Нуно сделать, чтобы при релизе (отправке) - rpmbs -s ? из git устанавливался тэг
-+ вынести в функцию: список бинарных пакетов на основе src.rpm и каталога с пакетами
-
+rpmbph пока не умеет работать с git
 !!
 Изменить порядок поиска замен, чтобы он происходил без базовой версии, а замены от предыдущей версии
-действовали на следующие (тогда нужно вводить понятие порядка версий)
+действовали на следующие (тогда нужно вводить понятие порядка версий). Таким образом, файл с общими заменами не нужен,
+а при поиске нужно искать с текущей версии до меньших.
 
 При rpmbb в git не пишется лог сборки
 
