--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+etersoft-build-utils-1.5.2: 11 Dec 2008
+- fix using from other projects
+- add get_version, fix inc_release, inc_subrelease
+- disable annoyed Target distro (use VERBOSE=1)
+- clean up code (thanks Slava Semushin for comments)
+- myhsh: disable -x (trace info)
+- fix rpmbb -r (buildreq) with git
+
 etersoft-build-utils-1.5.1: 06 Dec 2008
 - APTCONF sets used apt.conf if defined
 - add support for x86_64 build with generic i586 sources.list
