--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+etersoft-build-utils-1.5.5: 15 Jan 2009
+- rpmbph: support non numerical releases
+- loginhsh: enable /proc mount
+- rpmqf: value link recursively
+- rpmgs: add set version support (altbug #14397)
+- update repl rules
+- fix LISTBUILT, LISTNAMES, LISTRPMARGS (remove spaces)
+- add IGNOREGEAR support to disable gear detecting in current dir)
+
 etersoft-build-utils-1.5.4: 10 Jan 2009
 - introduce eterbuild/eterbuild script for public use
 - cleanup code, remove obsoleted functions
