--- a/TODO
+++ b/TODO
@@ -1,3 +1,10 @@
+Для простоты сделать перепаковку прямо в host-системе, не погружаясь внутрь?
+
+Использовать сборочные команды из лежащего рядом репозитория??
+
+сделать раскрытие версии и имени пакета:
+fonts-ttf-%fname-1.04-alt1.src.rpm
+
 rpmbph: переписать с --define _specdir --define _sourcedir
 rpmgp -r для git -
 если есть каталог %name -
