--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,20 @@
+etersoft-build-utils-1.6.0: 13 Jan 2009
+- switch to use git.alt build srpm command instead rsync to Incoming
+- rpmbs: support git.alt for -u at gear repo
+- rpmbph: use legacy compression for ALT 4.0/4.1 and not alt systems
+- rpmgs: add gear import support
+- support xdg-open instead BROWSER
+- rpmcs: correct handle + (plus sign) in package names
+- gpush: add -f/--force support
+- rpmgs: add 7z archive support
+- rpmbs: add save log entry for task build
+- add undefine libtoolize for alt systems
+- set correct vendor when repack src.rpm with rpmbph
+- rpmunmets: add compare packages requires with their previous versions
+- rpmbph: replace Patch with Patch0
+- rpmbs: fix create tag
+- pkgrepl.rpm: update rules
+
 etersoft-build-utils-1.5.6: 13 Jan 2009
 - rpm: do not check MENV during src.rpm packing, disable obsoleted SPECDIR checking
 - rpm: NAMESRPMIN have to be without dirname part
