--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+etersoft-build-utils-1.6.2: 09 Jul 2009
+- add universal make_release script
+- check version if NEEDETERBUILD contains needed version
+- rpmbph: remove -m64 from optflags on Ubuntu/Debian
+
 etersoft-build-utils-1.6.1: 09 Jul 2009
 - ginit: add remote alias origin, load config
 - rpmbs: add ssh target support for ETERDESTSRPM
