--- a/share/eterbuild/pkgrepl/pkgrepl.asplinux.11.2
+++ b/share/eterbuild/pkgrepl/pkgrepl.asplinux.11.2
@@ -43,3 +43,5 @@ libXevie-devel|xorg-x11-devel
 libXv-devel|xorg-x11-devel
 
 gccmakedep|xorg-x11-devel
+xorg-xextproto-devel|xorg-x11-devel
+xorg-inputproto-devel|xorg-x11-devel
