add rules for xorg-x11 packages

--- a/share/eterbuild/pkgrepl/pkgrepl.scientific.4.1
+++ b/share/eterbuild/pkgrepl/pkgrepl.scientific.4.1
@@ -45,3 +45,6 @@ libXevie-devel|XFree86-devel
 libXv-devel|XFree86-devel
 
 gccmakedep|xorg-x11-devel
+xorg-xextproto-devel|xorg-x11-devel
+xorg-inputproto-devel|xorg-x11-devel
+xorg-sdk|xorg-x11-sdk
