add rule for xorg-sdk

--- a/share/eterbuild/pkgrepl/pkgrepl.asplinux.11.2
+++ b/share/eterbuild/pkgrepl/pkgrepl.asplinux.11.2
@@ -45,3 +45,4 @@ libXv-devel|xorg-x11-devel
 gccmakedep|xorg-x11-devel
 xorg-xextproto-devel|xorg-x11-devel
 xorg-inputproto-devel|xorg-x11-devel
+xorg-sdk|xorg-x11-sdk
