--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+etersoft-build-utils-1.6.9: 21 Nov 2009
+- fix GIRARHOST for subcommand
+- drop rpm-build-compat require
+
 etersoft-build-utils-1.6.8: 21 Nov 2009
 - rpmurl: fix get src.rpm name contains -
 - rpmcs: fix %__awker and so on replacement
