--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+Если пакет начинается с lib, добавлять перед %files:
+%post -p %post_ldconfig
+%postun -p %postun_ldconfig
+
 Что-то пишет пакет в upload.SS при простом rpmbs -u
 
 http://git.altlinux.org/people/kharpost/packages/gitalt-tasker.git?p=gitalt-tasker.git;a=blob;f=gitalt-tasker/git-task;h=81e0261813a9fe2be230fb0c47b4ff4efd9a2675;hb=bfcc80b9af49b8ea0629db80d4c2f29a024d574e
