--- a/TODO
+++ b/TODO
@@ -1,14 +1,17 @@
+rpmgp -b не работает из-за apt-get build-dep, делать вручную
 Если пакет начинается с lib, добавлять перед %files:
 %post -p %post_ldconfig
 %postun -p %postun_ldconfig
+для backports
 
-Что-то пишет пакет в upload.SS при простом rpmbs -u
+Что-то пишет пакет в upload.SS при простом rpmbs -u ??
 
 http://git.altlinux.org/people/kharpost/packages/gitalt-tasker.git?p=gitalt-tasker.git;a=blob;f=gitalt-tasker/git-task;h=81e0261813a9fe2be230fb0c47b4ff4efd9a2675;hb=bfcc80b9af49b8ea0629db80d4c2f29a024d574e
 
 не раобтает указание цкелевого каталога в korinf
 
 Добавить поддержку в спеке служебного комментария для автоматической перепаковки исходников:
+Учитывать gear
 # etersoft-build-utils repack DIR - упаковать DIR в архив с названием NAME-VERSION
 # etersoft-build-utils remove DIR/FILE [DIR/FILE] - удалить указанные каталоги и файлы и упаковать
 
@@ -45,11 +48,7 @@ exec time rpmbuild --target="\$target" $nodeps -bs "\$@"
 действовали на следующие (тогда нужно вводить понятие порядка версий). Таким образом, файл с общими заменами не нужен,
 а при поиске нужно искать с текущей версии до меньших.
 
-При rpmbb в git не пишется лог сборки
-
 Нужно сделать замену требований к пакетам только для Req (и уж точно не для )
-подробнее рассказывать, почему не работает hasher
-сейчас хэшер вызывается с src.rpm из SRPMS
 
 файлы с заменой:
 пакет ALT - пакет замены
@@ -58,7 +57,6 @@ pkgrepl.pclinux - для конкретной системы
 pkgrepl.pclinux.2007 - для конкретной версии системы
 записываем, откуда (из ALT) на что в другой системе менять
 
-Сделать -x для удалённой сборки на x86_64?
 %homedir в определении tmp не работает?
 
 Реализовать rpm -bE через rpm --showrc ?
@@ -81,7 +79,7 @@ pkgrepl.pclinux.2007 - для конкретной версии системы
  - обновить/сделать страницу с описанием проекта?
 
 === Версия 1.8 ===
- - how to use --build-args= for hsh? - проброс параметров в myhsh как параметров для rpm
+ + how to use --build-args= for hsh? - проброс параметров в myhsh как параметров для rpm
  - Сделать нормальную документацию?
  - получение спеков из других проектов, с отчётом об обновлении (diff между)
  - исправить формирование .pot
@@ -95,11 +93,6 @@ pkgrepl.pclinux.2007 - для конкретной версии системы
  - -i -u требуют именно такого порядка использования
  - перейти на общую обработку всех команд (одним скриптом)?
 
-
-Каждый мантейнер (если боится забыть посмотреть лог сборки) может
-уже сейчас сделать себе alias вида
-alias hsh="hsh --build='--define \"_unpackaged_files_terminate_build 1\"'"
-не говоря уже про ~/.rpmmacros
 
 Unpackaged:
 awk '
