--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+Перепаковывать нужно внутри hasher - иначе макросы неверно раскрываются (особенно про python)
+
+aptU А можно не только обновлять, но просто выводить список всех зависимых
+пакетов? И с учётом
 
 Исправить ситуацию для 27.5.1 (MINOR - 1, MAJOR 27.5 должно быть), почему стирается %revision
 
