Fixed suse builds

--- a/share/eterbuild/pkgrepl/pkgrepl.suse.11.1
+++ b/share/eterbuild/pkgrepl/pkgrepl.suse.11.1
@@ -39,6 +39,8 @@ libXvMC-devel|xorg-x11-devel
 libXcursor-devel|xorg-x11-devel
 libXevie-devel|xorg-x11-devel
 libXv-devel|xorg-x11-libXv-devel
+libXcomposite|xorg-x11
+libXpm|xorg-x11-libXpm
 
 libmesa-devel|Mesa
 libGLU-devel|Mesa
