--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+Mandriva не видит проблем с зависимостями при сборке...
+
 Перепаковывать нужно внутри hasher - иначе макросы неверно раскрываются (особенно про python)
 
 aptU А можно не только обновлять, но просто выводить список всех зависимых
