add ImageMagick repl for ALT 4.x

--- a/share/eterbuild/pkgrepl/pkgrepl.alt.4.1
+++ b/share/eterbuild/pkgrepl/pkgrepl.alt.4.1
@@ -3,3 +3,4 @@ libfreeglut-devel|freeglut-devel
 libesd-devel|esound-devel
 libgif-devel|libungif-devel
 libgif|libungif
+ImageMagick-tools|ImageMagick
