--- a/share/eterbuild/pkgrepl/pkgrepl.alt.4.1
+++ b/share/eterbuild/pkgrepl/pkgrepl.alt.4.1
@@ -4,3 +4,5 @@ libesd-devel|esound-devel
 libgif-devel|libungif-devel
 libgif|libungif
 ImageMagick-tools|ImageMagick
+
+kernel-build-tools|kernel-build-tools kernel-headers-modules-std-smp kernel-headers-modules-ovz-smp
