--- a/share/eterbuild/pkgrepl/pkgrepl.mdv.2009.1
+++ b/share/eterbuild/pkgrepl/pkgrepl.mdv.2009.1
@@ -2,3 +2,5 @@ libarts-devel|arts3-devel
 
 libXcomposite|libxcomposite1
 libXpm|libxpm4
+libreadline-devel|libreadline-devel
+libreadline|libreadline6
