--- a/share/eterbuild/pkgrepl/pkgrepl.alt.2.3
+++ b/share/eterbuild/pkgrepl/pkgrepl.alt.2.3
@@ -46,3 +46,5 @@ libXcursor-devel|XFree86-devel
 libXevie-devel|XFree86-devel
 libXv-devel|XFree86-devel
 xorg-cf-files|
+
+kernel-build-tools|kernel-build-tools
