--- a/README
+++ b/README
@@ -1,19 +1,16 @@
 This package is a set of helper utils for rpm building process.
 
 See info in Russian at
-http://www.freesource.info/wiki/AltLinux/Razrabotchiku/SborkaPaketov
+http://www.altlinux.org/Etersoft-build-utils_howto
 
 See QuickHelp.txt also.
 
 This package is tested with follow Linux distributions:
  - ALT Linux 4.0/4.1/5.0/Sisyphus
  - ASP Linux 11/12/14
- - Scientific/4.1
- - Fedora Core 8/9/10/11
- - OpenSuSe 10/10.1/11
+ - Fedora 9/10/11
+ - OpenSuSe 10/11
  - Mandriva 2008/2009
- - MOPSLinux 5.0/6.0/6.1
- - Slackware 10.2/11
  - Debian 3.1 (Sarge) / 4.0 / 5.0
  - Ubuntu 6.06/7.04/7.10/8.04/8.10/9.04
 
@@ -41,7 +38,7 @@ rpmbph [-M30] [-r] [-u/-U] name.spec - backport spec and build package for previ
 rpmgs name.spec - download main source file for spec (works with any types)
 	-f force
 
-rpmgp name  - download src.rpm for package 'name' or download source package 'name'
+rpmgp -g name  - clone git with latest package version
 	-c name | name.spec | package*rpm - check if the package is published in Sisyphus
 	-b name.spec - install need packages for build (via apt-get)
 	-n download only
