--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+280 %buildhost ${USER:-`id -nu`}.hasher.altlinux.org
+
 Mandriva не видит проблем с зависимостями при сборке...
 
 Перепаковывать нужно внутри hasher - иначе макросы неверно раскрываются (особенно про python)
